# bbpbcn

./: .gitignore  README.md  SKILL.md
burp/: README.md
burp/bbpb_cn/: __init__.py
burp/bbpbcn/: __init__.py
docs/: TypeDefs.md
lib/: CLI.md  Makefile  README.md  pyproject.toml
lib/bbpb_cn/: __init__.py  __main__.py
lib/bbpb_cn/lib/: __init__.py  api.py  config.py  exceptions.py  packetanalyzer.py  protofile.py  pytypes.py  typedef.py
lib/bbpb_cn/lib/payloads/: __init__.py  grpc.py  gzip.py
lib/bbpb_cn/lib/types/: fixed.py  length_delim.py  type_maps.py  varint.py
lib/bbpbcn/: __init__.py  __main__.py
lib/bbpbcn/lib/: __init__.py  api.py  config.py  db.py  exceptions.py  packdiff.py  packetanalyzer.py  protofile.py  pytypes.py  typedef.py
lib/bbpbcn/lib/payloads/: __init__.py  grpc.py  gzip.py
lib/bbpbcn/lib/types/: fixed.py  length_delim.py  type_maps.py  varint.py
lib/blackboxprotobuf/: __init__.py  __main__.py
lib/blackboxprotobuf/lib/: __init__.py  api.py  config.py  exceptions.py  hexconvert.py  packetanalyzer.py  protofile.py  pytypes.py  typedef.py
lib/blackboxprotobuf/lib/payloads/: __init__.py  grpc.py  gzip.py
lib/blackboxprotobuf/lib/types/: __init__.py  fixed.py  length_delim.py  type_maps.py  varint.py  wiretypes.py
lib/tests/: requirements-python2-dev.txt  run_decoder.py
lib/tests/proxy_tests/: grpc_client.py  grpc_server.py  http_client.py  http_server.py  websocket_client.py  websocket_server.py
lib/tests/py_test/: strategies.py  test_exceptions.py  test_fixed.py  test_json.py  test_length_delim.py  test_payloads.py  test_perf.py  test_protobuf.py  test_protofile.py  test_typedef.py  test_varint.py
mitmproxy/: README.md  bbpb.py
(+17 files in other folders)
