[tool.poetry]
name = "bbpb-cn"
version = "1.4.2"
description = "Forked from blackboxprotobuf. Enhanced protobuf blind decode with better type inference (nesting, VARINT, Fixed heuristic). Chinese comments & docs."
authors = ["Contributors"]
license = "MIT"
repository = "https://github.com/chunjie008/bbpb_cn"
readme = "README.md"
keywords = ["protobuf"]
exclude = ["./tests"]
packages = [
    { include = "bbpb_cn" }
]

[tool.poetry.dependencies]
python = "^3.8"
six = "^1.16"


[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
hypothesis = "^6.31.6"
black = "^23.9.1"
protobuf = "^3.20"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"

[tool.poetry.scripts]
bbpb-cn = "bbpb_cn.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
